--- a/Source/Source/StarSystems/Config/system.cfg
+++ b/Source/Source/StarSystems/Config/system.cfg
@@ -3,7 +3,7 @@ KSPSystem {
 		semiMajorAxis = 4500000000000
 	}
 	Root {
-		SolarMasses = 7700
+		SolarMasses = 7400
 		Type = 0
 	}
 	StarSystems {
@@ -43,7 +43,7 @@ KSPSystem {
 				CelestialBody
 				{
 					name = Corbo
-					BodyDescription = Even though Corbo is barely observable from Kerbin, it is larer and more massive than Kerbol.
+					BodyDescription = Even though Corbo is barely observable from Kerbin, it is larger and more massive than Kerbol.
 					flightGlobalIndex = 220
 					StarColor = Red
 					Mass = 1.0542E29
@@ -57,6 +57,34 @@ KSPSystem {
         			eccentricity = 0.05
         			semiMajorAxis = 5956700000000
         			LAN = 180
+        			argumentOfPeriapsis = 240
+        			meanAnomalyAtEpoch = 0
+        			epoch = 0
+				}
+			}
+		}
+		StarSystem
+		{
+			Sun {
+				SolarMasses = 7700
+				Type = 0
+				CelestialBody
+				{
+					name = Binny
+					BodyDescription = The brightest star in the night sky, Binny is a white star almost twice the size of Kerbol.
+					flightGlobalIndex = 230
+					StarColor = White
+					Mass = 1.0542E29
+					Radius = 447600000
+					ScienceMultiplier = 10
+				}
+	
+				Orbit
+				{
+					inclination = 0.1
+        			eccentricity = 0.07
+        			semiMajorAxis = 4389000000000
+        			LAN = 1.7
         			argumentOfPeriapsis = 240
         			meanAnomalyAtEpoch = 0
         			epoch = 0
