Added various new stars

--- a/Source/Source/StarSystems/Config/system.cfg
+++ b/Source/Source/StarSystems/Config/system.cfg
@@ -7,6 +7,146 @@ KSPSystem {
 		Type = 0
 	}
 	StarSystems {
+	StarSystem
+		{
+			Sun {
+				SolarMasses = 7700
+				Type = 0
+				CelestialBody
+				{
+					name = Binny
+					BodyDescription = The brightest star in the night sky, Binny is a white star almost twice the size of Kerbol.
+					flightGlobalIndex = 50
+					StarColor = White
+					Mass = 1.0542E29
+					Radius = 447600000
+					ScienceMultiplier = 10
+				}
+	
+				Orbit
+				{
+					inclination = 0.1
+        			eccentricity = 0.07
+        			semiMajorAxis = 4389000000000
+        			LAN = 1.7
+        			argumentOfPeriapsis = 240
+        			meanAnomalyAtEpoch = 0
+        			epoch = 0
+				}
+			}
+		}
+		StarSystem
+		{
+			Sun {
+				SolarMasses = 7700
+				Type = 0
+				CelestialBody
+				{
+					name = Billy
+					BodyDescription = A tiny red dwarf close to Kerbol, Binny is invisible to the naked eye.
+					flightGlobalIndex = 100
+					StarColor = Red
+					Mass = 2.5294565E27
+					Radius = 447600000
+					ScienceMultiplier = 10
+				}
+	
+				Orbit
+				{
+					inclination = 0.7
+        			eccentricity = 0.04
+        			semiMajorAxis = 4701000000000
+        			LAN = 358
+        			argumentOfPeriapsis = 240
+        			meanAnomalyAtEpoch = 0
+        			epoch = 0
+				}
+			}
+		}
+		StarSystem
+		{
+			Sun {
+				SolarMasses = 7700
+				Type = 0
+				CelestialBody
+				{
+					name = Nim
+					BodyDescription = Known for passing very close to Kerbol over the years, Nim is only 7 times the mass of Jool.
+					flightGlobalIndex = 120
+					StarColor = Brown
+					Mass = 2.9632844E25
+					Radius = 8000000
+					ScienceMultiplier = 10
+				}
+	
+				Orbit
+				{
+					inclination = 3.94
+        			eccentricity = 0.21
+        			semiMajorAxis = 4900000000000
+        			LAN = 355
+        			argumentOfPeriapsis = 240
+        			meanAnomalyAtEpoch = 0
+        			epoch = 0
+				}
+			}
+		}
+		StarSystem
+		{
+			Sun {
+				SolarMasses = 7700
+				Type = 0
+				CelestialBody
+				{
+					name = Pillus
+					BodyDescription = A hot brown dwarf with a thin habitable zone.
+					flightGlobalIndex = 125
+					StarColor = RedBrown
+					Mass = 2.666956E26
+					Radius = 16000000
+					ScienceMultiplier = 10
+				}
+	
+				Orbit
+				{
+					inclination = 3.94
+        			eccentricity = 0.21
+        			semiMajorAxis = 4900000000000
+        			LAN = 355
+        			argumentOfPeriapsis = 240
+        			meanAnomalyAtEpoch = 0
+        			epoch = 0
+				}
+			}
+		}
+		StarSystem
+		{
+			Sun {
+				SolarMasses = 7700
+				Type = 0
+				CelestialBody
+				{
+					name = Chippo
+					BodyDescription = Originally mistaken to be a potato chip crumb on an astronomer's telescope, Chippo is actually an orange star almost as large as Kerbol.
+					flightGlobalIndex = 150
+					StarColor = Orange
+					Mass = 1.5698E28
+					Radius = 240000000
+					ScienceMultiplier = 10
+				}
+	
+				Orbit
+				{
+					inclination = 0.1
+        			eccentricity = 0.05
+        			semiMajorAxis = 5510700000000
+        			LAN = 0
+        			argumentOfPeriapsis = 300
+        			meanAnomalyAtEpoch = 0
+        			epoch = 0
+				}
+			}
+		}
 		StarSystem
 		{
 			Sun {
@@ -16,7 +156,7 @@ KSPSystem {
 				{
 					name = Dolas
 					BodyDescription = This small star has a much higher density than Kerbol, and is thought to be a good candidate for interstellar travel.
-					flightGlobalIndex = 210
+					flightGlobalIndex = 200
 					StarColor = Blue
 					Mass = 1.5698E28
 					Radius = 21530000
@@ -44,7 +184,7 @@ KSPSystem {
 				{
 					name = Corbo
 					BodyDescription = Even though Corbo is barely observable from Kerbin, it is larger and more massive than Kerbol.
-					flightGlobalIndex = 220
+					flightGlobalIndex = 250
 					StarColor = Red
 					Mass = 1.0542E29
 					Radius = 1236000000
@@ -57,34 +197,6 @@ KSPSystem {
         			eccentricity = 0.05
         			semiMajorAxis = 5956700000000
         			LAN = 180
-        			argumentOfPeriapsis = 240
-        			meanAnomalyAtEpoch = 0
-        			epoch = 0
-				}
-			}
-		}
-		StarSystem
-		{
-			Sun {
-				SolarMasses = 7700
-				Type = 0
-				CelestialBody
-				{
-					name = Binny
-					BodyDescription = The brightest star in the night sky, Binny is a white star almost twice the size of Kerbol.
-					flightGlobalIndex = 230
-					StarColor = White
-					Mass = 1.0542E29
-					Radius = 447600000
-					ScienceMultiplier = 10
-				}
-	
-				Orbit
-				{
-					inclination = 0.1
-        			eccentricity = 0.07
-        			semiMajorAxis = 4389000000000
-        			LAN = 1.7
         			argumentOfPeriapsis = 240
         			meanAnomalyAtEpoch = 0
         			epoch = 0
