--- a/Source/Source/StarSystems/Config/system.cfg
+++ b/Source/Source/StarSystems/Config/system.cfg
@@ -43,11 +43,11 @@ KSPSystem {
 				CelestialBody
 				{
 					name = Billy
-					BodyDescription = A tiny red dwarf close to Kerbol, Binny is invisible to the naked eye.
+					BodyDescription = A small red dwarf close to Kerbol, Binny is invisible to the naked eye.
 					flightGlobalIndex = 100
 					StarColor = Red
 					Mass = 2.5294565E27
-					Radius = 420000000
+					Radius = 42000000
 					ScienceMultiplier = 10
 				}
 	
