--- a/Source/Source/StarSystems/Config/system.cfg
+++ b/Source/Source/StarSystems/Config/system.cfg
@@ -154,9 +154,37 @@ KSPSystem {
 				Type = 0
 				CelestialBody
 				{
+					name = Krall
+					BodyDescription = An orange star similar to Chippo, Krall is relatively young.
+					flightGlobalIndex = 200
+					StarColor = Orange
+					Mass = 1.5698E28
+					Radius = 200000000
+					ScienceMultiplier = 10
+				}
+	
+				Orbit
+				{
+					inclination = 0.1
+        			eccentricity = 0.1
+        			semiMajorAxis = 7100000000000
+        			LAN = 3
+        			argumentOfPeriapsis = 300
+        			meanAnomalyAtEpoch = 0
+        			epoch = 0
+				}
+			}
+		}
+		StarSystem
+		{
+			Sun {
+				SolarMasses = 7700
+				Type = 0
+				CelestialBody
+				{
 					name = Dolas
 					BodyDescription = This small star has a much higher density than Kerbol, and is thought to be a good candidate for interstellar travel.
-					flightGlobalIndex = 200
+					flightGlobalIndex = 250
 					StarColor = Blue
 					Mass = 1.5698E28
 					Radius = 21530000
@@ -184,7 +212,7 @@ KSPSystem {
 				{
 					name = Corbo
 					BodyDescription = Even though Corbo is barely observable from Kerbin, it is larger and more massive than Kerbol.
-					flightGlobalIndex = 250
+					flightGlobalIndex = 300
 					StarColor = Red
 					Mass = 1.0542E29
 					Radius = 1236000000
